examples/test/testpolicy11992.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11992
  namespace: namespace70
spec:
  podSelector:
    matchLabels:
      key36: value10
      key30: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value13
          key38: value29
      podSelector:
        matchLabels:
          key27: value21
          key49: value31
